# Codex-Manager

./: .gitignore  README.md
.claude/: settings.local.json
.claude/tasks/: contracts.json  execution-plan.json
.claude/tasks/status/: task-001.json  task-002.json  task-003.json
CodexManager/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
CodexManager/src/: App.tsx
CodexManager/src-tauri/: Cargo.toml  tauri.conf.json
CodexManager/src-tauri/icons/: icon.icns
CodexManager/src-tauri/src/: commands.rs  config.rs  keychain.rs  lib.rs  microsoft.rs  migration.rs  oauth.rs  polling.rs  proxy.rs  state.rs  types.rs  usage.rs  utils.rs
CodexManager/src/Components/: AccountCard.tsx  AccountGrid.tsx  ConfirmDialog.tsx  CopyButton.tsx  Icons.tsx  InputDialog.tsx  PasswordField.tsx  PlanBadge.tsx  StatusBadge.tsx  TopBar.tsx  UsageBar.tsx
CodexManager/src/Hooks/: UseAccounts.ts  UseCopy.ts
CodexManager/src/Styles/: AccountCard.css  App.css
CodexManager/src/Types/: Account.ts
