[package]
name = "codex-manager"
version = "0.1.0"
description = "Multi-account Codex login manager"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-oauth = "2"
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tokio = { version = "1", features = ["rt", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
keyring = { version = "3", features = ["apple-native", "windows-native"] }
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
url = "2"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
urlencoding = "2"
open = "5"
once_cell = "1"
regex = "1"
arboard = "3"
axum = "0.8"
futures-util = "0.3"
